// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdaptivityElementAnswerSelection answer button is green if answer is correct and question is already completed 1`] = `
<div>
  <div
    class="flex flex-col w-full p-2 m-auto lg:justify-between lg:flex-row"
  >
    <div
      class="flex flex-wrap justify-start gap-4"
    >
      <div
        class=""
      >
        <button
          class="px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer hover:border-adlerdarkblue hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-adlergreen"
        >
          <p
            class="text-sm"
          >
            testAnswerText
          </p>
        </button>
      </div>
    </div>
    <div
      class="flex items-end justify-end w-auto gap-2 pt-8 font-bold lg:w-1/6"
    >
      <div
        class="fixed"
      >
        <div
          class=""
        >
          <button
            class="px-2 py-1 justify-center box-border text-adlerdeactivatedtext bg-adlerbuttonlocked flex items-center text-sm rounded-lg lg:text-xl font-regular border-t-[1px] border-l-[1px] border-b-4 border-r-4 border-white overflow-hidden"
            disabled=""
          >
            <p
              class="text-sm"
            >
              questionAlreadyAnswered
            </p>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdaptivityElementAnswerSelection should render 1`] = `
<div>
  <div
    class="flex flex-col w-full p-2 m-auto lg:justify-between lg:flex-row"
  >
    <div
      class="flex flex-wrap justify-start gap-4"
    >
      <div
        class=""
      >
        <button
          class="px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer hover:border-adlerdarkblue hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue"
        >
          <p
            class="text-sm"
          >
            testAnswerText
          </p>
        </button>
      </div>
    </div>
    <div
      class="flex items-end justify-end w-auto gap-2 pt-8 font-bold lg:w-1/6"
    >
      <div
        class="fixed"
      >
        <div
          class=""
        >
          <button
            class="px-2 py-1 justify-center box-border text-adlerdeactivatedtext bg-adlerbuttonlocked flex items-center text-sm rounded-lg lg:text-xl font-regular border-t-[1px] border-l-[1px] border-b-4 border-r-4 border-white overflow-hidden"
            disabled=""
          >
            <p
              class="text-sm"
            >
              submitAnswer
            </p>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
